objects/LAT_ReferenceAccount__c.object
<CustomObject>
    <description>This object will be related to an Account, and contains informartion about it.</description>
    <fields>
        <fullName>AN8__c</fullName>
        <description>Related Account AN8</description>
        <formula>Account__r.Client_code_AN8__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AN8</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <description>Name of the related Account</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountOwner__c</fullName>
        <description>Owner of the related account</description>
        <formula>Account__r.Owner.FirstName + &apos; &apos; + Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Reference Accounts</relationshipLabel>
        <relationshipName>LAT_ReferenceAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CNPJ__c</fullName>
        <formula>Account__r.CNPJ__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CNPJ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if this object is active for the project indicated by the record type</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional__c</fullName>
        <description>Regional of the related account</description>
        <formula>Account__r.Regional__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UF__c</fullName>
        <formula>Account__r.Revenue_UF__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UF</label>
        <type>Text</type>
    </fields>
    <label>Reference Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountOwner__c</columns>
        <columns>AN8__c</columns>
        <columns>Regional__c</columns>
        <columns>IsActive__c</columns>
        <columns>ExternalId__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_Contrato</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountOwner__c</columns>
        <columns>AN8__c</columns>
        <columns>Regional__c</columns>
        <columns>IsActive__c</columns>
        <columns>ExternalId__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceAccount__c.LAT_BR_ContractProvider</value>
        </filters>
        <label>BR Contrato</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BR_SellOut</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>AccountOwner__c</columns>
        <columns>AN8__c</columns>
        <columns>Regional__c</columns>
        <columns>IsActive__c</columns>
        <columns>CNPJ__c</columns>
        <columns>UF__c</columns>
        <columns>ExternalId__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>LAT_ReferenceAccount__c.LAT_BR_SellOut</value>
        </filters>
        <label>BR SellOut</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Reference Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Reference Accounts</pluralLabel>
    <recordTypes>
        <fullName>LAT_BR_ContractProvider</fullName>
        <active>true</active>
        <description>Records with this RT are Account availables to be included as providers in contracts</description>
        <label>BR Contract Provider</label>
    </recordTypes>
    <recordTypes>
        <fullName>LAT_BR_SellOut</fullName>
        <active>true</active>
        <label>BR SellOut</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>